knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/Case.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>