knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments__c</fullName>
    <label>Additional Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>