knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Agreed_Upon_Details__c.field-meta.xml
<CustomField>
    <fullName>Agreed_Upon_Details__c</fullName>
    <inlineHelpText>If Performance Quality Metrics Select One = Agreed Upon, then attach or provide details</inlineHelpText>
    <label>Agreed Upon Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>