knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Amount_at_risk__c.field-meta.xml
<CustomField>
    <fullName>Amount_at_risk__c</fullName>
    <inlineHelpText>If KPI At Risk Money is checked, then input the Amount at risk: $ or %. At risk money may not exceed amount of Subsidy</inlineHelpText>
    <label>Amount at risk: $ or %</label>
    <length>64</length>
    <type>Text</type>
</CustomField>