knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Amount_of_Incentive_Money__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Incentive_Money__c</fullName>
    <inlineHelpText>If KPI Incentive Money is checked, then input the amount of Incentive Money: $ or %</inlineHelpText>
    <label>Amount of Incentive Money: $ or %</label>
    <length>64</length>
    <type>Text</type>
</CustomField>