knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Annual_Subsidy__c.field-meta.xml
<CustomField>
    <fullName>Annual_Subsidy__c</fullName>
    <label>Annual Subsidy</label>
    <length>64</length>
    <type>Text</type>
</CustomField>