knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Any_cross_subsidization__c.field-meta.xml
<CustomField>
    <fullName>Any_cross_subsidization__c</fullName>
    <inlineHelpText>If there are multiple programs, is there any cross subsidization?</inlineHelpText>
    <label>Any cross subsidization?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>