knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/APAY_Budgeted__c.field-meta.xml
<CustomField>
    <fullName>APAY_Budgeted__c</fullName>
    <label>APAY Budgeted</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>