knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/APAY_Used_for_the_Month__c.field-meta.xml
<CustomField>
    <fullName>APAY_Used_for_the_Month__c</fullName>
    <label>APAY Used for the Month</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>