knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Attestations__c.field-meta.xml
<CustomField>
    <fullName>Attestations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attestations</label>
    <type>Checkbox</type>
</CustomField>