knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Backfill_Recommended__c.field-meta.xml
<CustomField>
    <fullName>Backfill_Recommended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Backfill Recommended</label>
    <type>Checkbox</type>
</CustomField>