knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Bonus_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Amount__c</fullName>
    <label>Bonus Amount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>