knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Bonus_Repayment__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Repayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bonus Repayment</label>
    <type>Checkbox</type>
</CustomField>