knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Bonus_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Unit_of_Measure__c</fullName>
    <label>Bonus Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>per Hour</fullName>
            </value>
            <value>
                <fullName>per Shift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>