knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Business_Issues_Reason__c.field-meta.xml
<CustomField>
    <fullName>Business_Issues_Reason__c</fullName>
    <label>Business Issues Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mission Compliance</fullName>
            </value>
            <value>
                <fullName>Malpractice History</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Litigation History</fullName>
            </value>
            <value>
                <fullName>Contractual Dispute</fullName>
            </value>
            <value>
                <fullName>Hospital Request</fullName>
            </value>
            <value>
                <fullName>Contractual Issue</fullName>
            </value>
            <value>
                <fullName>Scheduling Concerns</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>