knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Clinician_Rate__c.field-meta.xml
<CustomField>
    <fullName>Clinician_Rate__c</fullName>
    <formula>Shift__r.Rate__c</formula>
    <label>Clinician Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>