knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Coding_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Coding_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coding Opportunity</label>
    <type>Checkbox</type>
</CustomField>