knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Connected_Care_Services_Included__c.field-meta.xml
<CustomField>
    <fullName>Connected_Care_Services_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Connected Care Services Included</label>
    <type>Checkbox</type>
</CustomField>