knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Critical_Care__c.field-meta.xml
<CustomField>
    <fullName>Critical_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Critical Care</label>
    <type>Checkbox</type>
</CustomField>