knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Current_Clinicians_under_Non_Compete__c.field-meta.xml
<CustomField>
    <fullName>Current_Clinicians_under_Non_Compete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Clinicians under Non-Compete?</label>
    <type>Checkbox</type>
</CustomField>