knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Date_Escalated__c.field-meta.xml
<CustomField>
    <fullName>Date_Escalated__c</fullName>
    <label>Date Escalated</label>
    <type>Date</type>
</CustomField>