knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Date_Termination_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Termination_Received__c</fullName>
    <inlineHelpText>Date termination request was received</inlineHelpText>
    <label>Date Termination Received</label>
    <type>Date</type>
</CustomField>