knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Discharge_Day_Management_DDM__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Day_Management_DDM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discharge Day Management (DDM)</label>
    <type>Checkbox</type>
</CustomField>