knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Documentation_Variance__c.field-meta.xml
<CustomField>
    <fullName>Documentation_Variance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documentation Variance</label>
    <type>Checkbox</type>
</CustomField>