knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/EM_Tele_triage_Services__c.field-meta.xml
<CustomField>
    <fullName>EM_Tele_triage_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EM Tele-triage Services</label>
    <type>Checkbox</type>
</CustomField>