knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/EMR_Training__c.field-meta.xml
<CustomField>
    <fullName>EMR_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EMR Training</label>
    <type>Checkbox</type>
</CustomField>