knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Escalation__c.field-meta.xml
<CustomField>
    <fullName>Escalation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Escalation</label>
    <type>Checkbox</type>
</CustomField>