knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Escalation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Comments__c</fullName>
    <label>Escalation Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>