knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Existing_Clinician__c.field-meta.xml
<CustomField>
    <fullName>Existing_Clinician__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Clinician</label>
    <type>Checkbox</type>
</CustomField>