knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Exit_Interview_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Exit_Interview_Requirement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exit Interview Requirement</label>
    <type>Checkbox</type>
</CustomField>