knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <formula>Healthcare_Practitioner_Facility__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility</label>
    <type>Text</type>
</CustomField>