knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Facility_Query_Request__c.field-meta.xml
<CustomField>
    <fullName>Facility_Query_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facility Query Request</label>
    <type>Checkbox</type>
</CustomField>