knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Facility_Rate__c.field-meta.xml
<CustomField>
    <fullName>Facility_Rate__c</fullName>
    <formula>Shift__r.Facility_Level_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility Rate</label>
    <type>Text</type>
</CustomField>