knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Financial_Arrangement__c.field-meta.xml
<CustomField>
    <fullName>Financial_Arrangement__c</fullName>
    <label>Financial Arrangement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fee for Service with No Subsidy</fullName>
            </value>
            <value>
                <fullName>Fee for Service &amp; Flat Subsidy</fullName>
            </value>
            <value>
                <fullName>Margin Guarantee</fullName>
            </value>
            <value>
                <fullName>Fixed Management Fee</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>