knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Governance_Provisions__c.field-meta.xml
<CustomField>
    <fullName>Governance_Provisions__c</fullName>
    <label>Governance Provisions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quarterly Governance Meetings (full transparency, standard process) + Regular Operating Reviews</fullName>
            </value>
            <value>
                <fullName>Quarterly Business Reviews + Regular Operating Reviews</fullName>
            </value>
            <value>
                <fullName>Routine Operating Reviews Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>