knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/has_Parent_Case__c.field-meta.xml
<CustomField>
    <fullName>has_Parent_Case__c</fullName>
    <formula>NOT(OR(ISBLANK(ParentId),  ISNULL(ParentId)) )</formula>
    <label>has Parent Case</label>
    <type>Checkbox</type>
</CustomField>