knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/HiOps_Chart_to_be_reviewed_from_EMR__c.field-meta.xml
<CustomField>
    <fullName>HiOps_Chart_to_be_reviewed_from_EMR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HiOps Chart to be reviewed from EMR</label>
    <type>Checkbox</type>
</CustomField>