knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/HiOps_HPS_Queries__c.field-meta.xml
<CustomField>
    <fullName>HiOps_HPS_Queries__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HiOps/HPS Queries</label>
    <type>Checkbox</type>
</CustomField>