knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/HiOps_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>HiOps_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HiOps Opportunity</label>
    <type>Checkbox</type>
</CustomField>