knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/HiOps_Other__c.field-meta.xml
<CustomField>
    <fullName>HiOps_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HiOps Other</label>
    <type>Checkbox</type>
</CustomField>