knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/HiOps_Return_to_mySCP__c.field-meta.xml
<CustomField>
    <fullName>HiOps_Return_to_mySCP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HiOps Return to mySCP</label>
    <type>Checkbox</type>
</CustomField>