knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/History_Physical_H_P__c.field-meta.xml
<CustomField>
    <fullName>History_Physical_H_P__c</fullName>
    <defaultValue>false</defaultValue>
    <label>History &amp; Physical (H&amp;P)</label>
    <type>Checkbox</type>
</CustomField>