knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/HM_Telemedicine_Services__c.field-meta.xml
<CustomField>
    <fullName>HM_Telemedicine_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HM Telemedicine Services</label>
    <type>Checkbox</type>
</CustomField>