knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/HM_Weekly_Education__c.field-meta.xml
<CustomField>
    <fullName>HM_Weekly_Education__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HM Weekly Education</label>
    <type>Checkbox</type>
</CustomField>