knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Initial_Term_Years__c.field-meta.xml
<CustomField>
    <fullName>Initial_Term_Years__c</fullName>
    <label>Initial Term (Years)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>