knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/KPI_At_Risk_Money__c.field-meta.xml
<CustomField>
    <fullName>KPI_At_Risk_Money__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KPI At Risk Money</label>
    <type>Checkbox</type>
</CustomField>