knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Last_Day__c.field-meta.xml
<CustomField>
    <fullName>Last_Day__c</fullName>
    <inlineHelpText>Agreement termination date</inlineHelpText>
    <label>Last Day</label>
    <type>Date</type>
</CustomField>