knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Leased_Providers__c.field-meta.xml
<CustomField>
    <fullName>Leased_Providers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leased Providers</label>
    <type>Checkbox</type>
</CustomField>