knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Malpractice_Insurance_Provided_By__c.field-meta.xml
<CustomField>
    <fullName>Malpractice_Insurance_Provided_By__c</fullName>
    <label>Malpractice Insurance Provided By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>SCP Health</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>