knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Material_Change_Language__c.field-meta.xml
<CustomField>
    <fullName>Material_Change_Language__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Material Change Language</label>
    <type>Checkbox</type>
</CustomField>