knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Maximum_Amount_Hospital_will_Contribute__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Amount_Hospital_will_Contribute__c</fullName>
    <label>Maximum Amount Hospital will Contribute?</label>
    <length>64</length>
    <type>Text</type>
</CustomField>