knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Medical_Decision_Making_MDM__c.field-meta.xml
<CustomField>
    <fullName>Medical_Decision_Making_MDM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Decision Making (MDM)</label>
    <type>Checkbox</type>
</CustomField>