knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Medical_Director__c.field-meta.xml
<CustomField>
    <fullName>Medical_Director__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Director</label>
    <type>Checkbox</type>
</CustomField>