knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/MIPS_Quality__c.field-meta.xml
<CustomField>
    <fullName>MIPS_Quality__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MIPS/Quality</label>
    <type>Checkbox</type>
</CustomField>