knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Monthly_Provider_Call__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Provider_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monthly Provider Call</label>
    <type>Checkbox</type>
</CustomField>