knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/MS_Issues_20_charts_30days__c.field-meta.xml
<CustomField>
    <fullName>MS_Issues_20_charts_30days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MS Issues/&gt;20 charts/&gt;30days</label>
    <type>Checkbox</type>
</CustomField>