knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/mySCP_Care_Queries_Issues_15_30_da__c.field-meta.xml
<CustomField>
    <fullName>mySCP_Care_Queries_Issues_15_30_da__c</fullName>
    <defaultValue>false</defaultValue>
    <label>mySCP Care Queries/Issues &gt; 15 / &gt; 30 da</label>
    <type>Checkbox</type>
</CustomField>