knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/mySCP_Care_Training__c.field-meta.xml
<CustomField>
    <fullName>mySCP_Care_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>mySCP Care Training</label>
    <type>Checkbox</type>
</CustomField>