knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/New_Provider__c.field-meta.xml
<CustomField>
    <fullName>New_Provider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Provider</label>
    <type>Checkbox</type>
</CustomField>