knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/No_Action__c.field-meta.xml
<CustomField>
    <fullName>No_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Action</label>
    <type>Checkbox</type>
</CustomField>