knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Non_standard_Details__c.field-meta.xml
<CustomField>
    <fullName>Non_standard_Details__c</fullName>
    <inlineHelpText>If Standard Malpractice Limits is unchecked, then provide Non-standard Details</inlineHelpText>
    <label>Non-standard Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>