knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Number_of_Charts_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Charts_Reviewed__c</fullName>
    <label>Number of Charts Reviewed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>