knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Of_Charts_HiReviewed__c.field-meta.xml
<CustomField>
    <fullName>Of_Charts_HiReviewed__c</fullName>
    <label># Of Charts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>