knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/of_Clinicians_Contracted_to_Work__c.field-meta.xml
<CustomField>
    <fullName>of_Clinicians_Contracted_to_Work__c</fullName>
    <inlineHelpText>Recruiting % without Candidates</inlineHelpText>
    <label>% of Clinicians Contracted to Work</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>