knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Offboarding_Decision__c.field-meta.xml
<CustomField>
    <fullName>Offboarding_Decision__c</fullName>
    <label>Offboarding Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Longer Exiting</fullName>
            </value>
            <value>
                <fullName>Confirmed Exit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>