knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Operation_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Operation_Follow_up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Operation Follow-up</label>
    <type>Checkbox</type>
</CustomField>