knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Other_Leased_Personnel__c.field-meta.xml
<CustomField>
    <fullName>Other_Leased_Personnel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Leased Personnel</label>
    <type>Checkbox</type>
</CustomField>