knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Other_Leased_Personnel_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Leased_Personnel_Description__c</fullName>
    <label>Other Leased Personnel Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>