knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Pay_Through_Date__c.field-meta.xml
<CustomField>
    <fullName>Pay_Through_Date__c</fullName>
    <description>This is the field that gets the default value from HPF&apos;S Last Date Worked BUT user will be able to edit.</description>
    <label>Pay Through Date</label>
    <type>Date</type>
</CustomField>