knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/PE_Workday_Criteria_Met__c.field-meta.xml
<CustomField>
    <fullName>PE_Workday_Criteria_Met__c</fullName>
    <description>This field is used in &apos;&apos;Case Closure Workday Intimation Flow&apos; to compare the close date with todays date and determine if the record can be picked up for Workday intimation</description>
    <formula>DATEVALUE(ClosedDate) = TODAY() - VALUE( $Label.Offboarding_PE_Delay_Days )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PE Workday Criteria Met</label>
    <type>Checkbox</type>
</CustomField>