knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Performance_Quality_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Performance_Quality_Metrics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Performance/Quality Metrics</label>
    <type>Checkbox</type>
</CustomField>