knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Performance_Quality_Metrics_PkList__c.field-meta.xml
<CustomField>
    <fullName>Performance_Quality_Metrics_PkList__c</fullName>
    <label>Performance Quality Metrics</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agreed Upon</fullName>
            </value>
            <value>
                <fullName>To be Negotiated prior to Start Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>