knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/Person_Escalated_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>Person_Escalated_To_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person Escalated To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>