knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Case/fields/PMT_Phase__c.field-meta.xml
<CustomField>
    <fullName>PMT_Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PMT Phase</label>
    <referenceTo>inov8__PMT_Phase__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>